# SherpaOnnxAzureSAPI-installer

./: .env  .gitignore  AACSpeakHelperServer.py  ARCHITECTURE.md  AzureTTSBridge.ps1  BUILD.md  BuildCompleteInstaller.ps1  BuildInstructions.md  BuildNativeOnly.ps1  BuildTestAndLog.ps1  CLEAN_PROJECT_STRUCTURE.md  CPP_TTS_IMPLEMENTATION_PLAN.md  CleanupCodebase.ps1  CleanupSimple.ps1  CompleteCleanup.ps1  DemoCompleteInstaller.ps1  DeployRealTTS.ps1  Directory.build.props  FINAL_SOLUTION.md  FinalProjectStructure.md  FixArchitecture.ps1  FixAzureVoiceRegistration.ps1  FixCOMRegistration.ps1  FixPipeServiceArchitecture.ps1  FixVoiceClsid.ps1  INSTALLER.md  INSTALLER_FIX_SUMMARY.md  INTEGRATION_TESTING.md  PIPE_VOICES_README.md  PRD-MultiEngine.md  PRD.md  QuickRegistryFix.ps1  QuickTest.ps1  README.md  RegisterAmyVoice.ps1  RegisterComWrapper.ps1  RegisterInterfaces.bat  RegisterInterfaces.ps1  RegisterInterfacesSimple.ps1  SAMPLE_RATE_FIX.md  (+78 more)
.github/workflows/: build-and-publish.yml  build-and-release.yml  build-installer.yml  build-simple.yml
AACSpeakHelper/: AACSpeakHelperServer.py  CreateGridset.py  LICENSE  README.md  build_executable.bat  build_migration_tool.bat  buildscript.iss  configure_enc_utils.py  create_encryption_key.py  encrypt_config.py  prepare_config_enc.py  pyproject.toml  settings.cfg.example  test_pipe.py  todo.md  tts_utils.py  utils.py
AACSpeakHelper/.github/workflows/: windows-build-release-public.yml
AACSpeakHelper/assets/: TranslateAndTTS DemoGridset.gridset
AACSpeakHelper/utils/: diagnose_installed_audio.py  migrate_settings.py  pyaudio_test_generator.py
ConfigApp/: ConfigApp.csproj  MainForm.cs  Program.cs  app.manifest
DirectTest/: Program.cs
Installer/: AzureConfigManager.cs  AzureTtsModel.cs  AzureTtsService.cs  AzureVoiceInstaller.cs  ConfigBasedVoiceManager.cs  EngineConfigManager.cs  Installer.csproj  ModelInstaller.cs  PipeServiceBridge.cs  PipeServiceComWrapper.cs  Product.wxs  Program.cs  Sapi5Registrar.cs  Sapi5RegistrarExtended.cs  SherpaOnnxSAPI.wixproj  app.manifest
Installer/Core/: ConfigurationManager.cs  PluginLoader.cs  TtsEngineManager.cs
Installer/Core/Base/: SapiVoiceImplBase.cs  TtsEngineBase.cs
Installer/Core/Interfaces/: ISapiVoiceImpl.cs  ITtsEngine.cs
Installer/Core/Managers/: ConfigurationManager.cs  PluginLoader.cs  TtsEngineManager.cs
Installer/Core/Models/: ConfigurationParameter.cs  EngineConfiguration.cs  (+1 more)
Installer/Shared/: AzureConfig.cs  AzureTtsModel.cs  LanguageCodeConverter.cs  LanguageCodeConverter.cs.c  LanguageInfo.cs  TtsModel.cs
KeyGenerator/: GenerateKey.targets  OpenSpeechKey.snk  Program.cs
MultiEngineTest/: Models.cs  MultiEngineTest.csproj  Program.cs  README.md  test-config-example.json  test-config.json
NativeTTSWrapper/: AzureTTSEngine.cpp  AzureTTSEngine.h  ITTSEngine.cpp  ITTSEngine.h  NativeTTSWrapper.cpp  NativeTTSWrapper.def  NativeTTSWrapper.h  NativeTTSWrapper.idl  NativeTTSWrapper.rc  NativeTTSWrapper.rgs  NativeTTSWrapper.sln  NativeTTSWrapper.vcxproj  NativeTTSWrapper_i.c  NativeTTSWrapper_i.h  NativeTTSWrapper_p.c  Resource.h  SherpaOnnxEngine.cpp  SherpaOnnxEngine.h  SpVoice.cpp  SpVoice.h  SpVoice.rgs  TTSEngineManager.cpp  TTSEngineManager.h  dlldata.c  dllmain.cpp  dllmain.h  engines_config.json  stdafx.h
OpenSpeechTTS/: App.config  AzureSapi5VoiceImpl.cs  AzureTTS.cs  Class1.cs  ISapi5Voice.cs  OpenSpeechTTS.csproj  OpenSpeechTTS.snk  Sapi5VoiceImpl.cs  SherpaTTS.cs
Plugins/: ITtsEngine.cs  OpenSpeech.TTS.Plugins.csproj  TtsEngineBase.cs
Plugins/AzureTTS/: AzureTtsPlugin.cs
Plugins/ElevenLabs/: ElevenLabsPlugin.cs  ElevenLabsPlugin.csproj
Plugins/PlayHT/: PlayHTPlugin.cs  PlayHTPlugin.csproj
Plugins/SherpaOnnx/: SherpaOnnxPlugin.cs
Shared/: Guids.cs
SherpaNative/: SherpaNative.cpp  SherpaNative.csproj  SherpaNative.def  SherpaNative.snk  SherpaNative.vcxproj  SherpaWrapper.cs
SherpaWorker/: Program.cs  SherpaWorker.csproj
SignAssembly/: Program.cs
SimpleTest/: App.config  DllExports.cs  DllInspector.cs  Program.cs  SimpleTest.csproj
TestTTS/: AssemblyInspector.cs  AssemblyInspector.csproj  Program.cs  TestTTS.csproj
archive/: BuildAndDeployProcessBridge.ps1  BuildNativeCOMWrapper.ps1  BuildNativeWrapper.ps1  CURRENT_STATUS_AND_PLAN.md  CheckLoaderExceptions.ps1  CleanupAndReset.ps1  DebugSAPIInterface.ps1  DeployNativeWrapper.ps1  DeployNativeWrapperSimple.ps1  DeployRealTTS.ps1  DeployUpdatedDLL.ps1  FINAL_ACHIEVEMENT_SUMMARY.md  FinalSAPIAssessment.ps1  FixSAPIRegistration.ps1  FixVoiceAttributes.bat  FixVoiceRegistration.ps1  InspectSherpaAssembly.ps1  InvestigateMSTTS.ps1  NATIVE_COM_WRAPPER_IMPLEMENTATION_GUIDE.md  ProcessBridgeDemo.ps1  QuickSpeakTest.ps1  QuickTest.ps1  SherpaWorkerPS.ps1  SimpleProcessBridgeTest.ps1  TestAutoInitialization.ps1  TestCOMInterfaceDirectly.ps1  TestCOMVoice.ps1  TestCurrentSystem.ps1  TestDirectSAPI.ps1  TestFullPipeline.ps1  TestGetOutputFormat.ps1  TestGetOutputFormatFirst.ps1  TestInterfaceQuery.ps1  TestMinimalInterface.ps1  TestNativeWrapper.ps1  TestNativeWrapperSimple.ps1  TestProcessBridgeDirectly.ps1  TestProcessBridgeEndToEnd.ps1  TestProcessBridgeIntegration.ps1  TestProcessBridgeTTS.ps1  (+17 more)
config/: engine-config.json
scripts/: Download-SherpaOnnx.ps1  register-clsid.ps1  register-mms-voice.ps1
voice_configs/: American-English-Azure-Jenny.json  British-English-Azure-Libby.json  British-English-SherpaOnnx-Amy.json  English-Google-Basic.json  English-SherpaOnnx-Jenny.json  English-eSpeak-Basic.json
(+20 files in other folders)
