[project]
name = "sherpaonnx-sapi-installer"
version = "1.0.0"
description = "C++ SAPI Bridge to AACSpeakHelper - Voice installer and manager"
authors = [
    {name = "Will Wade", email = "wwade@acecentre.org.uk"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    # Core dependencies for voice management
    "click>=8.0.0",
    "colorama>=0.4.0",
    "rich>=13.0.0",
    
    # JSON handling
    "pydantic>=2.0.0",
    
    # Windows registry access
    "winreg2>=1.0.0; sys_platform == 'win32'",
    
    # Optional: For future TTS testing
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=6.0.0",
    "setuptools>=68.0.0",
]

[project.scripts]
sapi-voice-manager = "SapiVoiceManager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
