[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherpaonnx-azure-sapi-installer"
version = "1.0.0"
description = "SAPI Voice Installer for AACSpeakHelper - A unified Python installer for managing SAPI voices"
authors = [
    {name = "Will Wade", email = "willwade@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "pywin32>=310",
    "pathlib",
]

[project.optional-dependencies]
dev = [
    "black",  # for code formatting
    "ruff",   # for linting
    "pytest", # for testing
]

build = [
    "pyinstaller",
]

[tool.setuptools]
py-modules = [
    "sapi_voice_installer",
]

[project.scripts]
sapi-voice-installer = "sapi_voice_installer:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
